[package]
name = "randcast-mock-demo"
version = "0.0.1"
authors = ["wrs"]
edition = "2018"

[dependencies]
dkg-core = { path = "../dkg-core" }
threshold-bls = { path = "../threshold-bls", default-features = false, features = ["bls12_381"] }
paired = { version = "0.18.0", features = ["serde"]}

gumdrop = "0.7.0"
rand = "0.7.3"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"

futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "0.2.21", features = ["macros"] }
rustc-hex = "2.1.0"
clt = "0.0.6"
